--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^4.6.0",
     "react-is-visible": "^1.2.0",
     "sharp": "^0.31.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "eslint": "8.14.0",
