--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.6.0",
     "react-is-visible": "^1.2.0",
+    "react-toastify": "^9.1.1",
     "sharp": "^0.31.0",
     "swr": "^1.3.0",
     "tippy.js": "^6.3.7"
